# tin-sample

./: MANIFEST  Makefile  README  README.MAC  README.WIN  aclocal.m4  conf-tin  config.guess  config.sub  configure  configure.in  po4a.conf  tin.spec
debian/: changelog  control  copyright  cpp_reprtime  rules  tin.config  tin.docs  tin.examples  tin.menu  tin.postinst  tin.templates  watch
debian/patches/: allow_minor_forgeries  better_built_in_defaults  better_tin.defaults  fix_capab_loop  fix_col_quote  fix_manpage_typo  fix_nntp_reconnect  fix_path_names  misc_autoconf.h  po_no_rebuild  series  update_paths_doc  use_default_pgp_key  use_libcanlock  use_system_libcanlock  zzz_fix_configure_bashism
debian/po/: POTFILES.in  cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  templates.pot  vi.po
debian/scripts/: vars
debian/upstream/: signing-key.asc
doc/: CHANGES  CHANGES.old  CREDITS  DEBUG_REFS  INSTALL  TODO  WHATSNEW  art_handling.txt  article.txt  auth.txt  config-anomalies  filtering  good-netkeeping-seal  internals.txt  keymap.sample  mailcap.sample  mbox.5  mmdf.5  newsoverview.5  nov_tests  opt-case.1  pgp.txt  plp_snprintf.3  rcvars.txt  reading-mail.txt  tin.1  tin.5  tin.defaults  tinews.1  tools.txt  umlaute.txt  umlauts.txt  url_handler.1  w2r.1
doc/l10n/: de.add  de.po  en_GB.po  po4a.conf  tin-man.pot
doc/l10n/de/: tin.1  tin.5
doc/l10n/en_GB/: tin.1  tin.5
include/: autoconf.hin  bool.h  bugrep.h  debug.h  extern.h  keymap.h  newsrc.h  nntplib.h  plp_snprintf.h  policy.h  proto.h  rfc2046.h  stpwatch.h  tcurses.h  tin.h  tinrc.h  tnntp.h  trace.h  version.h
intl/: Makefile.in  bindtextdom.c  dcgettext.c  dcigettext.c  dcngettext.c  dgettext.c  dngettext.c  explodename.c  finddomain.c  gettext.c  gettextP.h  intl-compat.c  l10nflist.c  loadmsgcat.c  localcharset.c  localealias.c  ngettext.c  plural.c  plural.y  textdomain.c
libcanlock/: CHANGES  HOWTO  Makefile.in  README
libcanlock/include/: base64.h  canlock.h  hmac_sha1.h  sha1.h
libcanlock/src/: base64.c  canlock.c  hmac_sha1.c  sha1.c
libcanlock/t/: canlocktest.c  canlocktest.shouldbe  hmactest.c  hmactest.shouldbe
pcre/: Makefile.in  config.h  version.sh
po/: Makefile.inn  POTFILES.in  da.gmo  da.po  de.gmo  de.po  en_GB.gmo  en_GB.po  et.gmo  et.po  fr.gmo  fr.po  ru.gmo  ru.po  rw.gmo  rw.po  sv.gmo  sv.po  tin.pot  tr.gmo  tr.po  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
src/: Makefile.in  active.c  art.c  attrib.c  auth.c  charset.c  color.c  config.c  cook.c  curses.c  debug.c  envarg.c  feed.c  filter.c  getline.c  global.c  group.c  hashstr.c  header.c  heapsort.c  help.c  inews.c  init.c  joinpath.c  keymap.c  lang.c  langinfo.c  list.c  lock.c  mail.c  main.c  makecfg.c  memory.c  mimetypes.c  misc.c  my_tmpfile.c  newsrc.c  nntplib.c  nrctbl.c  options_menu.c  (+31 more)
tools/: expiretover  metamutt  opt-case.pl  tinews.pl  tinlock  url_handler.pl  url_handler.sh  w2r.pl
upstream/patches/: systype.diff
